# quora-clone

./: .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml
quora/: db.sqlite3
quora/auth_app/: apps.py  urls.py  views.py
quora/auth_app/templates/: base.html
quora/auth_app/templates/registration/: login.html  signup.html
quora/question_app/: apps.py  forms.py  models.py  urls.py  views.py
quora/question_app/migrations/: 0001_initial.py
quora/question_app/templates/: create.html  detail.html  home.html
quora/question_app/templatetags/: custom_filters.py
quora/quora/: settings.py  urls.py
